traversal.column.traversalbycolumn.TraversalByColumn.scala.error
Compilation error:
TraversalByColumn:1: error: not found: value cpt
  ecritMessage(cpt)
               ^TraversalByColumn:6: error: not found: value x
        setPos(x,y)
               ^TraversalByColumn:6: error: not found: value y
        setPos(x,y)
                 ^