traversal.column.traversalbycolumn.TraversalByColumn.scala.code
override def run() {
  ecritMessage(cpt)
  do {
    var cpt=0
    for(i<- 0 to getMondeLargeur()){
      for (i<-0 to getMondeHauteur())
				setPos(x,y)
        ecritMessage(cpt)
      	cpt += 1
      
      	
    }

  } while (positionFinale()) 
  
}

def positionFinale(): Boolean = {
  	return ((getX()==getMondeLargeur()) && (getY()==getMondeHauteur()))
    
  }

